--- a/package.json
+++ b/package.json
@@ -5,26 +5,32 @@
   "repository": "https://github.com/pragmaticAweds/I4G-OPENSOURCE-BACKEND-PROJECT-2022.git",
   "author": "Abdul-Afiz <jimohafeez738@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "build": "yarn build src",
-    "start": "node src/index.js"
+    "tsc": "rm -rf ./dist && tsc",
+    "dev": "ts-node src/index.ts",
+    "start": "npm run tsc && node dist/index.js",
+    "start:dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "dotenv": "^16.0.2",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
