--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ db_uri= mongodb+srv://ingressive4good:8InJnt8yPCXFvw4C@cluster0.ox8sfon.mongodb.
 #cloudinary
 cloud_name= 'ingressive4good', 
 api_key= '112362487184414', 
-api_secret= 'aBnidqX3ZtgvpH9oro-X3BIsbgc
+api_secret= 'aBnidqX3ZtgvpH9oro-X3BIsbgc'
+
+#gcp
+google_client_id = 786221475718-a4qbeammlolv1cjuq399563q2mn9fgm4.apps.googleusercontent.com
+google_client_secret = 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
