--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "helmet": "^6.0.0",
+        "joi": "^17.6.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.5",
         "morgan": "^1.10.0",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-google-oidc": "^0.1.0",
         "winston": "^3.8.2"
     },
     "devDependencies": {
+        "ejs": "^3.1.8",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
