--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
         "joi": "^17.6.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.5",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.8.0",
         "passport": "^0.6.0",
+        "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-google-oidc": "^0.1.0",
         "winston": "^3.8.2"
     },
     "devDependencies": {
