--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
-        "express-validator": "^6.14.2",
         "helmet": "^6.0.0",
         "joi": "^17.6.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.5",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.8.0",
         "passport": "^0.6.0",
         "passport-facebook": "^3.0.0",
