User can initiate chat and send message

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "passport": "^0.6.0",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
+        "socket.io": "^4.5.3",
         "winston": "^3.8.2"
     },
     "devDependencies": {
